# flight_analysis

./: .gitignore  CMakeLists.txt  README.md  artificial_neural_network.cxx  artificial_neural_network_so.cxx  endeavor_tao_nn.cxx  flight_io.cxx  flight_io.hxx  generate_plot_data.cxx  get_flights.cxx  get_randomized_flights.cxx  hodor_submit.pbs  prediction_tao_nn.cxx  process_flights.cxx  sort_flight_files.cxx  submit_jobs_so.php  svm.cxx  svm_ea.cxx
parsing/: ParseResults.java  ParseResultsSweep.java  README  RankSearches.java  get_results_2.sh
plots/: generate_charts.scr  gnuplot_script.scr  histogram_errorbars_13588.scr  histogram_errorbars_15438.scr  histogram_errorbars_17269.scr  histogram_errorbars_175755.scr  histogram_errorbars_24335.scr  plot_flight_data.py  sweep_histogram.scr
test_networks/: fully_connected_elman_h1_n4.txt  fully_connected_ff_h1_n4.txt  fully_connected_jordan_h1_n4.txt
